# refacto

./: .cmake-format.yaml  .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md  __init__.py  conanfile.txt  config_tenrev.yml  example.py  install_lib.sh  inverter.csv  setup.py  test.csv
.cache/clangd/index/: cod.hpp.F4F391A14A47D910.idx  controller.cpp.7AF7CE31085E1B71.idx  controller.hpp.A38DF6B4ED1FEA7A.idx  csvparser.cpp.8A5ED25A3EB4F5CC.idx  csvparser.hpp.CBC3EA16E581F7C1.idx  customparser.cpp.13D3E91914B1B1EB.idx  customparser.hpp.37C215E1A711D55A.idx  parser.hpp.7A3517ACB113C040.idx  pugixml.cpp.35BF3429FDFCDC1C.idx  pugixml.hpp.4D37E355FF2AD3D0.idx  table.cpp.3A7ADC2DBB78C96E.idx  table.hpp.ABD4EA701C2E1409.idx  test_cod.cpp.1B72E27E8F17A0A3.idx  test_controller.cpp.AF51C165616AE009.idx  test_csv_cases.cpp.42399CE22D163F44.idx  test_customparser.cpp.5B129C5238198A26.idx  test_header.hpp.ADFA4B5C12CD0716.idx  test_table.cpp.0BEECED8696961FB.idx  test_xmlparser.cpp.E6E484C20C757DFF.idx  xmlparser.cpp.880EC42509A0982D.idx  xmlparser.hpp.180B13CE3DC326D8.idx
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  ci.yml  pipeline.yml  publish.yml  release.yaml
cmake/: Conan.cmake  SourcesAndHeaders.cmake  conanfile.txt
cmd/: build.sh  test.sh
config/tables/: inverter_metrics.yaml
data/tables/: pv_module_metrics.yaml
docker/: Dockerfile  conanfile.txt  docker-compose.yml  install.sh  install_for_actions.sh  install_gtest.sh  requires.sh
docs/: example.py  quickstart.md  test_grouping.py
extensions/py3/: README.md  parser.cpp  pytest.ini  setup.py
extensions/py3/qparsing.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
include/: csvparser.hpp  dtables.hpp  parser.hpp  table.hpp
include/refacto/: cod.hpp  controller.hpp  csvparser.hpp  customparser.hpp  dtables.hpp  parser.hpp  pugixml.hpp  table.hpp  xmlparser.hpp
interface/py3/: README.md  parser.pyx  setup.py
normalization/: structs.py
normalization/data/: tenrev.json
parsing/: __init__.py  csv_parser.cpp  parser.cpp  parser.pyx
parsing/core/: CMakeLists.txt  conanfile.txt  cppcheck-result.xml  parser.pyx  refacto.pc.in  suppressions.txt  t_ops.cpp  ubsan.supp
parsing/core/cmd/: test.sh
parsing/core/include/: cod.hpp  csvparser.hpp  pugixml.hpp  table.hpp
parsing/core/src/: csvparser.cpp  table.cpp  xmlparser.cpp
parsing/core/tests/: test_cod.cpp  test_csvparser.cpp  test_customparser.cpp  test_header.hpp
qparsing/: __init__.py
qparsing.egg-info/: PKG-INFO  SOURCES.txt
qparsing/core/: CMakeLists.txt  cppcheck-result.xml  ops.pxd  parser.pyx  test2.csv
qparsing/core/cmd/: build.sh  test.sh
qparsing/core/include/: cod.hpp  controller.hpp  csvparser.hpp  customparser.hpp  dtables.hpp  parser.hpp  pugixml.hpp  table.hpp  xmlparser.hpp
qparsing/core/src/: csvparser.cpp  customparser.cpp  dtables.cpp  pugixml.cpp  setup.py  table.cpp  xmlparser.cpp
qparsing/core/src/core/: CMakeLists.txt  conanfile.txt
qparsing/core/src/core/include/: cod.hpp
qparsing/core/src/core/src/: customparser.cpp
qparsing/core/src/core/tests/test_data/csv/expected/: SolarMax__Inverter.csv
qparsing/core/src/core/tests/test_data/xml/: Mean.20190112_123035.xml
qparsing/core/src/utils/: custom_logger.py
qparsing/core/tests/: CMakeLists.txt  test_cod.cpp  test_controller.cpp  test_csv_cases.cpp  test_csvparser.cpp  test_customparser.cpp  test_dtables.cpp  test_header.hpp  test_table.cpp  test_xmlparser.cpp
qparsing/core/tests/test_data/csv/input/: RCD_int_kwr_180223.txt
qparsing/core/tests/test_data/xml/: Mean.20190102_153037.xml  Mean.20190512_150040.xml  inverter.csv  inverter_mppt.csv
source/: CMakeLists.txt  csvparser.cpp  xmlparser.cpp
src/: csvparser.cpp  customparser.cpp  dtables.cpp  pugixml.cpp  setup.py  table.cpp  xmlparser.cpp
src/core/: CMakeLists.txt  cppcheck-result.xml  parser.pyx  test.csv
src/core/cmd/: build.sh  test.sh
src/core/include/: controller.hpp  csvparser.hpp  customparser.hpp  parser.hpp  pugixml.hpp  table.hpp  xmlparser.hpp
src/core/src/: csvparser.cpp  customparser.cpp  dtables.cpp  table.cpp  xmlparser.cpp
src/core/tests/: CMakeLists.txt  test_cod.cpp  test_controller.cpp  test_csv_cases.cpp  test_csvparser.cpp  test_customparser.cpp  test_dtables.cpp  test_header.hpp  test_table.cpp  test_xmlparser.cpp
src/core/tests/test_data/: inverter_mppt_metrics.yaml  test_wrong_types.yaml
src/core/tests/test_data/csv/cases/tenrev/: config_tenrev.yml
src/core/tests/test_data/csv/expected/: PlantName1.csv  Solarlog_ABB__Mppt.csv  Solarlog_Kaco__Mppt.csv
src/core/tests/test_data/csv/input/: 2018-07-06.csv  2018-07-09.csv  SolarMax.csv  Solarlog_Kaco.csv  min200611.csv
src/core/tests/test_data/csv/output/: CleanData.csv  ErasePattern.csv  Maulevrier__inverter.csv  Meteocontrol__inverter.csv  RCD_int_kwr_180223_inverter.csv  SolarMax__Mppt.csv  Solarlog_ABB__Inverter.csv  Solarlog_Kaco__Inverter.csv  Solarlog_Kaco__Mppt.csv  test1.csv
src/core/tests/test_data/tar/: WD00B766_INV_1_1_200712_000300.csv  test copy.tar
src/core/tests/test_data/xml/: inverter.csv
src/core/tests/test_data/zips/: Info.xml
test/: CMakeLists.txt
test/data/: test_wrong_columns.yaml
test/data/csv/: 2110130777_treated_data.csv
test/data/tar/: WD00B766_INV_1_1_200712_000300.csv  test copy.tar
test/include/: test_header.hpp
test/src/: test_cod.cpp  test_controller.cpp  test_csv_cases.cpp  test_csvparser.cpp  test_customparser.cpp  test_dtables.cpp  test_header.hpp  test_table.cpp  test_xmlparser.cpp
tests/: CMakeLists.txt  Makefile  test.cpp  test_csv_cases.cpp  test_csvparser.cpp  test_dtables.cpp  test_header.hpp  test_table.cpp  test_xmlparser.cpp
tests/test_data/: inverter_metrics.yaml  test.yaml
tests/test_data/csv/: 2018-07-10.csv  2018-07-11.csv  2018-07-12.csv
tests/test_data/csv/expected/: Solarlog_SMA__Inverter.csv
tests/test_data/csv/input/: 2018-07-05.csv  2018-07-07.csv  2018-07-08.csv  Meteocontrol.csv  RCD_int_kwr_180223.txt  Solarlog_ABB.csv  Solarlog_Kaco.csv  Solarlog_SMA.csv
(+36 files in other folders)
